--- a/UltraMonkeyConsoleTest/UltraMonkeyConsoleTest.csproj
+++ b/UltraMonkeyConsoleTest/UltraMonkeyConsoleTest.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\UltraMonkeyEFLibrary\UltraMonkeyEFLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
