--- a/UltraMonkeyEFLibrary/appsettings.json
+++ b/UltraMonkeyEFLibrary/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=UltraMonkey;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localdb)\\MSSQLLocalDB;Database=UltraMonkey;Trusted_Connection=True;"
   }
 }
