--- a/UltraMonkeyEFLibrary/appsettings.json
+++ b/UltraMonkeyEFLibrary/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localdb)\\MSSQLLocalDB;Database=UltraMonkey;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Ultramonkeys;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
